<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/spash_background" >

    <!-- Header aligned to top -->

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logodiscription"
            android:padding="5dp"
            android:src="@drawable/splash_crowd_logo" />
    </RelativeLayout>

    <!-- Footer aligned to bottom -->

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="20sp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/splash_footer_background"
        android:gravity="center" >

        <TextView
            android:id="@+id/splash_termcondition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/splash_term_condition"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" >
        </TextView>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/splash_layoutmain"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/footer"
        android:layout_below="@id/header"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/splash_layout_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <!-- Field for username -->
                <EditText
                    android:id="@+id/splash_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/apptheme_textfield_activated_holo_light"
                    android:hint="@string/splashhint_username"
                    android:singleLine="true"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" >
                </EditText>

                <TextView
                    android:id="@+id/splash_username_filled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="gone" />
                
                <!-- Field for age -->
                 <EditText
                    android:id="@+id/splash_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/apptheme_textfield_activated_holo_light"
                    android:hint="@string/splashhint_age"
                    android:singleLine="true"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" >
                </EditText>

                <TextView
                    android:id="@+id/splash_age_filled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="gone" />
                
                <!-- Field for groupId this will be assigned -->
                <EditText
                    android:id="@+id/splash_group_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/apptheme_textfield_activated_holo_light"
                    android:hint="@string/splashhint_group_id"
                    android:singleLine="true"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" >
                </EditText>

                <TextView
                    android:id="@+id/splash_group_filled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="gone" />
                
            </LinearLayout>

            <LinearLayout
                android:id="@+id/splash_layout_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/splash_username_require"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/splash_username_error"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/splash_btn_headoff"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/background_button"
                    android:text="@string/splashenter"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/splash_btn_exit"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/background_button2"
                    android:text="@string/splashexit"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/splash_progress_dialog"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>